# morivis

./: .gitignore  .npmrc  404.html  LICENSE  Makefile  README.md  _config.yml  _three.html  docker-compose.yml  ensyurin.code-workspace  index.html  justfile  license  manifest.webmanifest  map.html  morivis.code-workspace  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  robots.txt  sw.js
.github/: pull_request_template.md
_app/: env.js  version.json
_dev/: testmap.html
_development/: drug.html  iconanime.html  mapstyle.html  maptreestyle.html  three.html
api/: .env.example  Dockerfile  package.json
aws/: .gitignore  README.md  cdk.context.json.example  cdk.json  package.json  tsconfig.json
backend/: pyproject.toml
backend/app/: main.py
backend/data/: THETA360.geojson  THETA360_line.geojson
backend/data/search/: fac_ziriki_point.geojson
backend/scripts/: create_search_data.py  node.py
batch/: README.md  pyproject.toml
data/: .env.example  .gitignore  README.md  package.json
data/scripts/python/: _create_search_data.py  check.py  create_municipality_dict.py  create_poi_search_data.py  icon_image.py  node.py  proj.py  pyproject.toml
data/scripts/python/app/: main.py
data/scripts/python/data/: panorama_links.geojson  panorama_nodes.geojson
data/scripts/python/data/city_code/: 000925835.csv
data/scripts/python/data/search/: _fac_building_point.geojson  _fac_poi.geojson  fac_poi.geojson
doc/: README.md  data.md
docs/: README.md  data-pipeline.md
frontend/: .env.example  .gitignore  .npmrc  .prettierignore  CangeLine.js  CangePolygon.js  Dockerfile  README.md  eslint.config.js  generateJson.js  geocoding.js  main.js  package-lock.json  package.json  pnpm-lock.yaml  (+7 more)
frontend-js/: index.html
frontend-svelte/: package-lock.json  package.json  tsconfig.json  vite.config.ts
(+5871 files in other folders)
